<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_card_dark">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/fb_text_hint"
            app:boxBackgroundColor="@color/fb_bg_dark"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/fb_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/fb_text_primary"
                android:textColorHighlight="@color/fb_blue"
                android:textColorHint="@color/fb_text_hint"
                android:textCursorDrawable="@drawable/cursor_blue"
                tools:text="@tools:sample/lorem[7]" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/value"
            android:textColorHint="@color/fb_text_hint"
            app:boxBackgroundColor="@color/fb_bg_dark"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/fb_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/fb_text_primary"
                android:textColorHighlight="@color/fb_blue"
                android:textColorHint="@color/fb_text_hint"
                android:textCursorDrawable="@drawable/cursor_blue"
                tools:text="@tools:sample/lorem[7]" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/perform_this_action_on_reboot"
            android:textColor="@color/fb_text_primary"
            app:buttonTint="@color/fb_blue"
            app:rippleColor="@color/fb_ripple" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perform_this_action_via_shortcut"
            android:textColor="@color/fb_text_primary"
            app:buttonTint="@color/fb_blue"
            app:rippleColor="@color/fb_ripple" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>